--- a/index.html
+++ b/index.html
@@ -4,41 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01</title>
+    <title>Main page</title>
+    <!-- ====================== Attaching a styles file. ====================== -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-    <!-- Page header! -->
-    <header>
-        <!-- Main navigation -->
+
+<body class="page">
+
+    <!-- ====================== Page header! ====================== -->
+    <header class="page-header">
+        <!-- ====================== Main navigation ====================== -->
+
         <nav>
-            <!-- logo created as a text -->
-            <a href="./index.html">WebStudio</a>
-            <!-- Main page navigation -->
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <!-- ====================== logo created as a text ====================== -->
+            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+
+            <!-- ====================== Main page navigation ====================== -->
+            <ul class="site-nav">
+                <li><a href="./index.html" class="link carrent">Studio</a></li>
+                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+                <li><a href="" class="link current">Contacts</a></li>
             </ul>
+
         </nav>
-        <!-- Contacts -->
+
+        <!-- ====================== Contacts ====================== -->
        <address>
-            <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+
+            <ul class="auth-nav">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
+
        </address>
+
     </header>
-    <!-- Unique page content -->
+
+    <!-- ====================== Unique page content ====================== -->
     <main>
-        <!-- Section 1 -->
-        <section>
+        
+        <!-- ====================== Section 1 Hero ====================== -->
+        <section class="hero">
             <h1>Effective Solutions
                 for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
 
-        <!-- Section 2. Main fitures. -->
-        <section>
+        <!-- ====================== Section 2. Main fitures ====================== -->
+        <section class="section">
             <h2></h2>
             <ul>
                 <li>
@@ -61,8 +74,8 @@
             </ul>
         </section>
 
-        <!-- Section 3. What are we doing. -->
-        <section>
+        <!-- ====================== Section 3. What are we doing. ====================== -->
+        <section class="section">
             <h2>What are we doing</h2>
             <ul>
                 <li><img src="./images/monitor.jpg" alt="monitor" width="360" height="300"></li>
@@ -71,8 +84,8 @@
             </ul>
         </section>
 
-        <!-- Section 4. Our Team. -->
-        <section>
+        <!-- ====================== Section 4. Our Team. ====================== -->
+        <section class="section">
             <h2>Our Team</h2>
             <!-- Our Team cards -->
             <ul>
@@ -99,7 +112,7 @@
             </ul>
         </section>
     </main>
-    <!-- Page footer! -->
+    <!-- ====================== Page footer! ====================== -->
     <footer>
         <a href="./index.html">WebStudio</a>
         <p>
