--- a/portfolio.html
+++ b/portfolio.html
@@ -55,47 +55,47 @@
         <!-- Portfolio cards space -->
         <ul>
             <li>
-                <img src="./images/portfolio/bank-app.jpg" alt="banking applications">
+                <img src="./images/portfolio/bank-app.jpg" alt="banking applications" width="360" height="300">
                 <h2>Banking App Interface Concept</h2>
                 <p>App</p>
             </li>
             <li>
-                <img src="./images/portfolio/mobile-in-car.jpg" alt="mobile payments in the car">
+                <img src="./images/portfolio/mobile-in-car.jpg" alt="mobile payments in the car" width="360" height="300">
                 <h2>Cashless Payment</h2>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/portfolio/laptop.jpg" alt="laptop and phone">
+                <img src="./images/portfolio/laptop.jpg" alt="laptop and phone" width="360" height="300">
                 <h2>Meditaion App</h2>
                 <p>App</p>
             </li>
             <li>
-                <img src="./images/portfolio/steering-wheel.jpg" alt="hands on the steering wheel">
+                <img src="./images/portfolio/steering-wheel.jpg" alt="hands on the steering wheel" width="360" height="300">
                 <h2>Taxi Service</h2>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/portfolio/mobile-pic.jpg" alt="pictures on the phone screen">
+                <img src="./images/portfolio/mobile-pic.jpg" alt="pictures on the phone screen" width="360" height="300">
                 <h2>Screen Illustrations</h2>
                 <p>Design</p>
             </li>
             <li>
-                <img src="./images/portfolio/young-girl.jpg" alt="a girl with a phone in her hand">
+                <img src="./images/portfolio/young-girl.jpg" alt="a girl with a phone in her hand" width="360" height="300">
                 <h2>Online Courses</h2>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/portfolio/portret-pic.jpg" alt="design of stories for Instagram">
+                <img src="./images/portfolio/portret-pic.jpg" alt="design of stories for Instagram" width="360" height="300">
                 <h2>Instagram Stories Concept</h2>
                 <p>Design</p>
             </li>
             <li>
-                <img src="./images/portfolio/mesh-beg.jpg" alt="food in a mesh bag">
+                <img src="./images/portfolio/mesh-beg.jpg" alt="food in a mesh bag" width="360" height="300">
                 <h2>Organic Food</h2>
                 <p>Web Site</p>
             </li>
             <li>
-                <img src="./images/portfolio/cup-of-coffee.jpg" alt="cup of coffee in hand">
+                <img src="./images/portfolio/cup-of-coffee.jpg" alt="cup of coffee in hand" width="360" height="300">
                 <h2>Fresh Coffee</h2>
                 <p>Web Site</p>
             </li>
