--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         
         <!-- ====================== Section 1 Hero ====================== -->
         <section class="hero">
-            <h1>Effective Solutions
-                for Your Business</h1>
+            <h1 class="title-first">Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
 
@@ -76,7 +75,7 @@
 
         <!-- ====================== Section 3. What are we doing. ====================== -->
         <section class="section">
-            <h2>What are we doing</h2>
+            <h2 class="title-second main-text-style">What are we doing</h2>
             <ul>
                 <li><img src="./images/monitor.jpg" alt="monitor" width="360" height="300"></li>
                 <li><img src="./images/phone.jpg" alt="phone" width="360" height="300"></li>
