--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main page</title>
+    <!-- ====================== Attaching text styles. ====================== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <!-- ====================== Attaching a styles file. ====================== -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -17,13 +22,13 @@
 
         <nav>
             <!-- ====================== logo created as a text ====================== -->
-            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+            <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
 
             <!-- ====================== Main page navigation ====================== -->
             <ul class="site-nav">
-                <li><a href="./index.html" class="link carrent">Studio</a></li>
-                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-                <li><a href="" class="link current">Contacts</a></li>
+                <li><a href="./index.html" class="link medium-text carrent">Studio</a></li>
+                <li><a href="./portfolio.html" class="link medium-text">Portfolio</a></li>
+                <li><a href="" class="link medium-text">Contacts</a></li>
             </ul>
 
         </nav>
@@ -31,9 +36,9 @@
         <!-- ====================== Contacts ====================== -->
        <address>
 
-            <ul class="auth-nav">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul>
+                <li><a href="mailto:info@devstudio.com" class="link adress-text">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="link adress-text">+11 (000) 111-11-11</a></li>
             </ul>
 
        </address>
@@ -113,8 +118,8 @@
     </main>
     <!-- ====================== Page footer! ====================== -->
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
+        <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+        <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
