--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- ====================== Attaching text styles. ====================== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <!-- ====================== Attaching a styles file. ====================== -->
     <link rel="stylesheet" href="./css/styles.css">
@@ -22,11 +22,11 @@
 
         <nav>
             <!-- ====================== logo created as a text ====================== -->
-            <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+            <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio-h">Studio</span></a>
 
             <!-- ====================== Main page navigation ====================== -->
-            <ul class="site-nav">
-                <li><a href="./index.html" class="link medium-text carrent">Studio</a></li>
+            <ul class="site-nav link">
+                <li><a href="./index.html" class="link medium-text carrent">Studio</a></li> 
                 <li><a href="./portfolio.html" class="link medium-text">Portfolio</a></li>
                 <li><a href="" class="link medium-text">Contacts</a></li>
             </ul>
@@ -36,9 +36,9 @@
         <!-- ====================== Contacts ====================== -->
        <address>
 
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="link adress-text">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="link adress-text">+11 (000) 111-11-11</a></li>
+            <ul class="link">
+                <li><a href="mailto:info@devstudio.com" class="link small-text">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="link small-text">+11 (000) 111-11-11</a></li>
             </ul>
 
        </address>
@@ -49,31 +49,31 @@
     <main>
         
         <!-- ====================== Section 1 Hero ====================== -->
-        <section class="hero">
+        <section class="hero bg-color-h-f">
             <h1 class="title-first">Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="hero-button">Order Service</button>
         </section>
 
         <!-- ====================== Section 2. Main fitures ====================== -->
         <section class="section">
             <h2></h2>
-            <ul>
+            <ul class="link">
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="title-third">Strategy</h3>
+                    <p class="small-text">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <h3 class="title-third">Punctuality</h3>
+                    <p class="small-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    <h3 class="title-third">Diligence</h3>
+                    <p class="small-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <h3 class="title-third">Technologies</h3>
+                    <p class="small-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -81,7 +81,7 @@
         <!-- ====================== Section 3. What are we doing. ====================== -->
         <section class="section">
             <h2 class="title-second main-text-style">What are we doing</h2>
-            <ul>
+            <ul class="link">
                 <li><img src="./images/monitor.jpg" alt="monitor" width="360" height="300"></li>
                 <li><img src="./images/phone.jpg" alt="phone" width="360" height="300"></li>
                 <li><img src="./images/phon-plus-laptop.jpg" alt="phone and laptop" width="360" height="300"></li>
@@ -89,36 +89,36 @@
         </section>
 
         <!-- ====================== Section 4. Our Team. ====================== -->
-        <section class="section">
+        <section class="our-team-colors-bg">
             <h2>Our Team</h2>
             <!-- Our Team cards -->
-            <ul>
+            <ul class="link">
                 <li>
                     <img src="./images/mark-guerrero.jpg" alt="Product Designer Mark Guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="title-third">Mark Guerrero</h3>
+                    <p class="small-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/tom-ford.jpg" alt="Frontend Developer Tom Ford" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="title-third">Tom Ford</h3>
+                    <p class="small-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/camila-garcia.jpg" alt="Marketing Camila Garcia" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="title-third">Camila Garcia</h3>
+                    <p class="small-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/daniel-wilson.jpg" alt="UI Designer Daniel Wilson" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="title-third">Daniel Wilson</h3>
+                    <p class="small-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- ====================== Page footer! ====================== -->
-    <footer>
-        <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+    <footer class="bg-color-h-f">
+        <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio-f">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
