--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <!-- ====================== Attaching text styles. ====================== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <!-- ====================== Attaching a styles file. ====================== -->
     <link rel="stylesheet" href="./css/styles.css">
@@ -23,10 +23,10 @@
         <nav>
             
             <!-- ====================== logo created as a text ====================== -->
-            <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+            <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio-h">Studio</span></a>
 
             <!-- Main page navigation -->
-            <ul class="site-nav">
+            <ul class="site-nav link">
                 <li><a href="./index.html" class="link medium-text">Studio</a></li>
                 <li><a href="./portfolio.html" class="link medium-text carrent">Portfolio</a></li>
                 <li><a href="" class="link medium-text">Contacts</a></li>
@@ -37,9 +37,9 @@
         <!-- ====================== Contacts ====================== -->
        <address>
 
-            <ul class="auth-nav">
-                <li><a href="mailto:info@devstudio.com" class="link adress-text">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="link adress-text">+11 (000) 111-11-11</a></li>
+            <ul class="auth-nav link">
+                <li><a href="mailto:info@devstudio.com" class="link small-text">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="link small-text">+11 (000) 111-11-11</a></li>
             </ul>
 
        </address>
@@ -50,7 +50,7 @@
     <main>
 
         <!-- ====================== Top menu filter ====================== -->
-        <ul>
+        <ul class="link">
             <li><button type="button">All</button></li>
             <li><button type="button">Web Site</button></li>
             <li><button type="button">App</button></li>
@@ -59,7 +59,7 @@
         </ul>
         
         <!-- Portfolio cards space -->
-        <ul>
+        <ul class="link">
             <li>
                 <img src="./images/portfolio/bank-app.jpg" alt="banking applications" width="360" height="300">
                 <h2>Banking App Interface Concept</h2>
@@ -109,9 +109,9 @@
     </main>
 
      <!-- ====================== Page footer! ====================== -->
-     <footer>
-        <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
-        <p class="footer-text ">
+     <footer class="bg-color-h-f">
+        <a href="./index.html" class="link"><span class="logo-web">Web</span><span class="logo-studio-f">Studio</span></a>
+        <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
