--- a/portfolio.html
+++ b/portfolio.html
@@ -51,59 +51,59 @@
 
         <!-- ====================== Top menu filter ====================== -->
         <ul class="link">
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
+            <li><button type="button" class="button-nav button-text">All</button></li>
+            <li><button type="button" class="button-nav button-text">Web Site</button></li>
+            <li><button type="button" class="button-nav button-text">App</button></li>
+            <li><button type="button" class="button-nav button-text">Design</button></li>
+            <li><button type="button" class="button-nav button-text">Marketing</button></li>
         </ul>
         
         <!-- Portfolio cards space -->
         <ul class="link">
             <li>
                 <img src="./images/portfolio/bank-app.jpg" alt="banking applications" width="360" height="300">
-                <h2>Banking App Interface Concept</h2>
-                <p>App</p>
+                <h2 class="title-third">Banking App Interface Concept</h2>
+                <p class="small-text">App</p>
             </li>
             <li>
                 <img src="./images/portfolio/mobile-in-car.jpg" alt="mobile payments in the car" width="360" height="300">
-                <h2>Cashless Payment</h2>
-                <p>Marketing</p>
+                <h2 class="title-third">Cashless Payment</h2>
+                <p class="small-text">Marketing</p>
             </li>
             <li>
                 <img src="./images/portfolio/laptop.jpg" alt="laptop and phone" width="360" height="300">
-                <h2>Meditaion App</h2>
-                <p>App</p>
+                <h2 class="title-third">Meditaion App</h2>
+                <p class="small-text">App</p>
             </li>
             <li>
                 <img src="./images/portfolio/steering-wheel.jpg" alt="hands on the steering wheel" width="360" height="300">
-                <h2>Taxi Service</h2>
-                <p>Marketing</p>
+                <h2 class="title-third">Taxi Service</h2>
+                <p class="small-text">Marketing</p>
             </li>
             <li>
                 <img src="./images/portfolio/mobile-pic.jpg" alt="pictures on the phone screen" width="360" height="300">
-                <h2>Screen Illustrations</h2>
-                <p>Design</p>
+                <h2 class="title-third">Screen Illustrations</h2>
+                <p class="small-text">Design</p>
             </li>
             <li>
                 <img src="./images/portfolio/young-girl.jpg" alt="a girl with a phone in her hand" width="360" height="300">
-                <h2>Online Courses</h2>
-                <p>Marketing</p>
+                <h2 class="title-third">Online Courses</h2>
+                <p class="small-text">Marketing</p>
             </li>
             <li>
                 <img src="./images/portfolio/portret-pic.jpg" alt="design of stories for Instagram" width="360" height="300">
-                <h2>Instagram Stories Concept</h2>
-                <p>Design</p>
+                <h2 class="title-third">Instagram Stories Concept</h2>
+                <p class="small-text">Design</p>
             </li>
             <li>
                 <img src="./images/portfolio/mesh-beg.jpg" alt="food in a mesh bag" width="360" height="300">
-                <h2>Organic Food</h2>
-                <p>Web Site</p>
+                <h2 class="title-third">Organic Food</h2>
+                <p class="small-text">Web Site</p>
             </li>
             <li>
                 <img src="./images/portfolio/cup-of-coffee.jpg" alt="cup of coffee in hand" width="360" height="300">
-                <h2>Fresh Coffee</h2>
-                <p>Web Site</p>
+                <h2 class="title-third">Fresh Coffee</h2>
+                <p class="small-text">Web Site</p>
             </li>
         </ul>
     </main>
