Виправлення до ДЗ
Додано поинтер кнопкам, + ще щось по завданню дз :)

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,14 +28,14 @@
             <!-- Main page navigation -->
             <ul class="site-nav link">
                 <li><a href="./index.html" class="link medium-text">Studio</a></li>
-                <li><a href="./portfolio.html" class="link medium-text carrent">Portfolio</a></li>
+                <li><a href="./portfolio.html" class="link medium-text">Portfolio</a></li>
                 <li><a href="" class="link medium-text">Contacts</a></li>
             </ul>
 
         </nav>
 
         <!-- ====================== Contacts ====================== -->
-       <address>
+       <address class="adress-nav">
 
             <ul class="auth-nav link">
                 <li><a href="mailto:info@devstudio.com" class="link small-text">info@devstudio.com</a></li>
