--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <!-- ====================== Main page navigation ====================== -->
             <ul class="site-nav link">
-                <li><a href="./index.html" class="link medium-text carrent">Studio</a></li> 
+                <li><a href="./index.html" class="link medium-text">Studio</a></li> 
                 <li><a href="./portfolio.html" class="link medium-text">Portfolio</a></li>
                 <li><a href="" class="link medium-text">Contacts</a></li>
             </ul>
@@ -34,11 +34,11 @@
         </nav>
 
         <!-- ====================== Contacts ====================== -->
-       <address>
+       <address class="adress-nav">
 
             <ul class="link">
-                <li><a href="mailto:info@devstudio.com" class="link small-text">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="link small-text">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link small-text carrent">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="link small-text carrent">+11 (000) 111-11-11</a></li>
             </ul>
 
        </address>
