Правка HW2 після перевірки
1. Логотип випралено. (text-transform: uppercase;)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- ====================== Section 1 Hero ====================== -->
         <section class="hero bg-color-h-f">
             <h1 class="title-first">Effective Solutions for Your Business</h1>
-            <button type="button" class="hero-button">Order Service</button>
+            <button type="button" class="hero-button button-text">Order Service</button>
         </section>
 
         <!-- ====================== Section 2. Main fitures ====================== -->
@@ -90,7 +90,7 @@
 
         <!-- ====================== Section 4. Our Team. ====================== -->
         <section class="our-team-colors-bg">
-            <h2>Our Team</h2>
+            <h2 class="title-second">Our Team</h2>
             <!-- Our Team cards -->
             <ul class="link">
                 <li>
