--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,10 @@
     <!-- ====================== Main oraginal conten ====================== -->
     <main>
 
-        <!-- ====================== Top menu filter ====================== -->
+        <!-- ====================== Main section ====================== -->
+        <section>
+
+            <!-- ====================== Top menu filter ====================== -->
         <ul class="link">
             <li><button type="button" class="button-nav button-text">All</button></li>
             <li><button type="button" class="button-nav button-text">Web Site</button></li>
@@ -106,6 +109,8 @@
                 <p class="small-text">Web Site</p>
             </li>
         </ul>
+        </section>
+        
     </main>
 
      <!-- ====================== Page footer! ====================== -->
