Остаточна правка WH2
1)	Логотип в хедері та футері виправлено. Всі великі літери.
2)	Колір пунктів меню встановлено через змінну як у макеті.
3)	Шрифт кнопки Order Service першої сторінки встановлено як на макеті.
4)	Зайві коментарі з файлу стилів видалив.
5)	Для головків прибрав стандарту вагу (400, 700).
6)	Відформатовав код файлу стилів за каноном (про фігурні дужки).
7)	Заголовку Our Team задав стилі, як на макеті.
8)	 На сторінці Portfolio задав списку кнопок правильні стилі.
9)	Обгорнув кнопки та картки в одну секцію.
10)	 Глобальні стилі перемістив в початок фалу стилів.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </ul>
         </section>
 
-        <!-- ====================== Section 4. Our Team. ====================== -->
+        <!-- ====================== Section 4. Our Team ====================== -->
         <section class="our-team-colors-bg">
             <h2 class="title-second">Our Team</h2>
             <!-- Our Team cards -->
